@startuml

package Tools{
    CompEntry --|> Comparable
    class CompEntry<K,V>
    {
        -key:K
        -value:V
        CompEntry(k:K , v:V)
        value():V
        key():K
        compareTo(o:CompEntry):int
    }
    AnimatorsVolatiles "parent" o-- IGameObject
    class AnimatorsVolatiles
    {
        -{static}inst:AnimatorsVolatiles
        +{static}getInst:AnimatorsVolatiles
        -options : [String]
        AnimatorsVolatiles()
        getVolatile(pos:IVector2, name:String):ITransform
        getExplo(pos:IVector2):ITransform
    }

    class Random{
        +{static}value() : float
        +{static}value(min:int,max:int) : float

    }

    class Tools {
        +{static} random(array:[X]):X
        +{static} contains(array:[X], elem:X):boolean
    }
}
@enduml
